docs/install-errors.log
cannaramacbookpro:~ patricericard$ cd dev/
cannaramacbookpro:dev patricericard$ ls
Simon                                   epicerie-OLD                            scrapy-web-scraping-Primeau-exemple
Technolodge                             scrapy                                  solid-website-template
Tricot-Principal                        scrapy-howto.txt
cannaramacbookpro:dev patricericard$ git clone https://github.com/antwake/bento-starter.git epicerie
Cloning into 'epicerie'...
remote: Enumerating objects: 55, done.
remote: Counting objects: 100% (55/55), done.
remote: Compressing objects: 100% (41/41), done.
remote: Total 321 (delta 24), reused 27 (delta 12), pack-reused 266
Receiving objects: 100% (321/321), 915.47 KiB | 4.03 MiB/s, done.
Resolving deltas: 100% (106/106), done.
cannaramacbookpro:dev patricericard$ cd epicerie
cannaramacbookpro:epicerie patricericard$ npm run setup

> bento-starter@0.1.0 presetup /Users/patricericard/dev/epicerie
> npm install


> fsevents@1.2.9 install /Users/patricericard/dev/epicerie/node_modules/fsevents
> node install

node-pre-gyp WARN Using request for node-pre-gyp https download 
[fsevents] Success: "/Users/patricericard/dev/epicerie/node_modules/fsevents/lib/binding/Release/node-v72-darwin-x64/fse.node" is installed via remote

> puppeteer@1.15.0 install /Users/patricericard/dev/epicerie/node_modules/puppeteer
> node install.js

Downloading Chromium r650583 - 87.7 Mb [====================] 100% 0.0s 
Chromium downloaded to /Users/patricericard/dev/epicerie/node_modules/puppeteer/.local-chromium/mac-650583

> iltorb@1.3.10 install /Users/patricericard/dev/epicerie/node_modules/iltorb
> detect-libc prebuild-install || node-gyp rebuild

prebuild-install WARN install No prebuilt binaries found (target=12.2.0 runtime=node arch=x64 platform=darwin)
  CC(target) Release/obj.target/iltorb/brotli/common/dictionary.o
  CC(target) Release/obj.target/iltorb/brotli/dec/bit_reader.o
  CC(target) Release/obj.target/iltorb/brotli/dec/decode.o
  CC(target) Release/obj.target/iltorb/brotli/dec/huffman.o
  CC(target) Release/obj.target/iltorb/brotli/dec/state.o
  CC(target) Release/obj.target/iltorb/brotli/enc/backward_references.o
  CC(target) Release/obj.target/iltorb/brotli/enc/backward_references_hq.o
  CC(target) Release/obj.target/iltorb/brotli/enc/bit_cost.o
  CC(target) Release/obj.target/iltorb/brotli/enc/block_splitter.o
  CC(target) Release/obj.target/iltorb/brotli/enc/brotli_bit_stream.o
  CC(target) Release/obj.target/iltorb/brotli/enc/cluster.o
  CC(target) Release/obj.target/iltorb/brotli/enc/compress_fragment.o
  CC(target) Release/obj.target/iltorb/brotli/enc/compress_fragment_two_pass.o
  CC(target) Release/obj.target/iltorb/brotli/enc/dictionary_hash.o
  CC(target) Release/obj.target/iltorb/brotli/enc/encode.o
  CC(target) Release/obj.target/iltorb/brotli/enc/entropy_encode.o
  CC(target) Release/obj.target/iltorb/brotli/enc/histogram.o
  CC(target) Release/obj.target/iltorb/brotli/enc/literal_cost.o
  CC(target) Release/obj.target/iltorb/brotli/enc/memory.o
  CC(target) Release/obj.target/iltorb/brotli/enc/metablock.o
  CC(target) Release/obj.target/iltorb/brotli/enc/static_dict.o
  CC(target) Release/obj.target/iltorb/brotli/enc/utf8_util.o
  CXX(target) Release/obj.target/iltorb/src/common/allocator.o
  CXX(target) Release/obj.target/iltorb/src/common/stream_coder.o
  CXX(target) Release/obj.target/iltorb/src/dec/stream_decode.o
../src/dec/stream_decode.cc:14:72: error: no matching member function for call to 'ToObject'
    Local<Object> dictionary = Nan::Get(params, key).ToLocalChecked()->ToObject();
                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/Users/patricericard/.node-gyp/12.2.0/include/node/v8.h:2532:44: note: candidate function not viable: requires single argument 'context',
      but no arguments were provided
  V8_WARN_UNUSED_RESULT MaybeLocal<Object> ToObject(
                                           ^
/Users/patricericard/.node-gyp/12.2.0/include/node/v8.h:2546:35: note: candidate function not viable: requires single argument 'isolate',
      but no arguments were provided
                    Local<Object> ToObject(Isolate* isolate) const);
                                  ^
../src/dec/stream_decode.cc:40:49: error: no matching member function for call to 'ToObject'
  StreamDecode* obj = new StreamDecode(info[0]->ToObject());
                                       ~~~~~~~~~^~~~~~~~
/Users/patricericard/.node-gyp/12.2.0/include/node/v8.h:2532:44: note: candidate function not viable: requires single argument 'context',
      but no arguments were provided
  V8_WARN_UNUSED_RESULT MaybeLocal<Object> ToObject(
                                           ^
/Users/patricericard/.node-gyp/12.2.0/include/node/v8.h:2546:35: note: candidate function not viable: requires single argument 'isolate',
      but no arguments were provided
                    Local<Object> ToObject(Isolate* isolate) const);
                                  ^
../src/dec/stream_decode.cc:48:35: error: no matching member function for call to 'ToObject'
  Local<Object> buffer = info[0]->ToObject();
                         ~~~~~~~~~^~~~~~~~
/Users/patricericard/.node-gyp/12.2.0/include/node/v8.h:2532:44: note: candidate function not viable: requires single argument 'context',
      but no arguments were provided
  V8_WARN_UNUSED_RESULT MaybeLocal<Object> ToObject(
                                           ^
/Users/patricericard/.node-gyp/12.2.0/include/node/v8.h:2546:35: note: candidate function not viable: requires single argument 'isolate',
      but no arguments were provided
                    Local<Object> ToObject(Isolate* isolate) const);
                                  ^
../src/dec/stream_decode.cc:54:16: error: no matching member function for call to 'BooleanValue'
  if (info[2]->BooleanValue()) {
      ~~~~~~~~~^~~~~~~~~~~~
/Users/patricericard/.node-gyp/12.2.0/include/node/v8.h:2559:8: note: candidate function not viable: requires single argument 'isolate',
      but no arguments were provided
  bool BooleanValue(Isolate* isolate) const;
       ^
/Users/patricericard/.node-gyp/12.2.0/include/node/v8.h:2562:51: note: candidate function not viable: requires single argument 'context',
      but no arguments were provided
                V8_WARN_UNUSED_RESULT Maybe<bool> BooleanValue(
                                                  ^
../src/dec/stream_decode.cc:70:16: error: no matching member function for call to 'BooleanValue'
  if (info[1]->BooleanValue()) {
      ~~~~~~~~~^~~~~~~~~~~~
/Users/patricericard/.node-gyp/12.2.0/include/node/v8.h:2559:8: note: candidate function not viable: requires single argument 'isolate',
      but no arguments were provided
  bool BooleanValue(Isolate* isolate) const;
       ^
/Users/patricericard/.node-gyp/12.2.0/include/node/v8.h:2562:51: note: candidate function not viable: requires single argument 'context',
      but no arguments were provided
                V8_WARN_UNUSED_RESULT Maybe<bool> BooleanValue(
                                                  ^
5 errors generated.
make: *** [Release/obj.target/iltorb/src/dec/stream_decode.o] Error 1
gyp ERR! build error 
gyp ERR! stack Error: `make` failed with exit code: 2
gyp ERR! stack     at ChildProcess.onExit (/Users/patricericard/.nvm/versions/node/v12.2.0/lib/node_modules/npm/node_modules/node-gyp/lib/build.js:262:23)
gyp ERR! stack     at ChildProcess.emit (events.js:196:13)
gyp ERR! stack     at Process.ChildProcess._handle.onexit (internal/child_process.js:257:12)
gyp ERR! System Darwin 18.6.0
gyp ERR! command "/Users/patricericard/.nvm/versions/node/v12.2.0/bin/node" "/Users/patricericard/.nvm/versions/node/v12.2.0/lib/node_modules/npm/node_modules/node-gyp/bin/node-gyp.js" "rebuild"
gyp ERR! cwd /Users/patricericard/dev/epicerie/node_modules/iltorb
gyp ERR! node -v v12.2.0
gyp ERR! node-gyp -v v3.8.0
gyp ERR! not ok 

> grpc@1.20.3 install /Users/patricericard/dev/epicerie/node_modules/grpc
> node-pre-gyp install --fallback-to-build --library=static_library

node-pre-gyp WARN Using request for node-pre-gyp https download 
[grpc] Success: "/Users/patricericard/dev/epicerie/node_modules/grpc/src/node/extension_binary/node-v72-darwin-x64-unknown/grpc_node.node" is installed via remote

> yorkie@2.0.0 install /Users/patricericard/dev/epicerie/node_modules/yorkie
> node bin/install.js

setting up Git hooks
done


> node-sass@4.12.0 install /Users/patricericard/dev/epicerie/node_modules/node-sass
> node scripts/install.js

Cached binary found at /Users/patricericard/.npm/node-sass/4.12.0/darwin-x64-72_binding.node

> protobufjs@6.8.8 postinstall /Users/patricericard/dev/epicerie/node_modules/protobufjs
> node scripts/postinstall


> cypress@3.2.0 postinstall /Users/patricericard/dev/epicerie/node_modules/cypress
> node index.js --exec install


Cypress 3.2.0 is installed in /Users/patricericard/Library/Caches/Cypress/3.2.0


> node-sass@4.12.0 postinstall /Users/patricericard/dev/epicerie/node_modules/node-sass
> node scripts/build.js

Binary found at /Users/patricericard/dev/epicerie/node_modules/node-sass/vendor/darwin-x64-72/binding.node
Testing binary
Binary is fine
npm WARN optional SKIPPING OPTIONAL DEPENDENCY: iltorb@1.3.10 (node_modules/iltorb):
npm WARN optional SKIPPING OPTIONAL DEPENDENCY: iltorb@1.3.10 install: `detect-libc prebuild-install || node-gyp rebuild`
npm WARN optional SKIPPING OPTIONAL DEPENDENCY: Exit status 1

added 2209 packages from 1152 contributors and audited 53671 packages in 86.404s
found 70 vulnerabilities (64 low, 6 high)
  run `npm audit fix` to fix them, or `npm audit` for details

> bento-starter@0.1.0 setup /Users/patricericard/dev/epicerie
> node ./internals/setup.js


✔ Node version v12.2.0 OK
✔ npm version 6.9.0 OK
✔ Created env local file
✔ Extraneous dependencies uninstalled
✔ README.md content replaced
✔ Useless resources have been deleted


Done!
cannaramacbookpro:epicerie patricericard$ 